--- a/releases.cfg
+++ b/releases.cfg
@@ -25,6 +25,11 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r0, RESTDIRAC:v0r2, COMDIRAC:v0r8, Web:v1r3p7, WebApp:v1r0
     Externals = v6r1
   }
+  v6r11p8
+  {
+    Modules = DIRAC, VMDIRAC:v1r0, RESTDIRAC:v0r2, COMDIRAC:v0r8, Web:v1r3p7, WebApp:v1r0
+    Externals = v6r1
+  }
   v6r11p7
   {
     Modules = DIRAC, VMDIRAC:v1r0, RESTDIRAC:v0r2, COMDIRAC:v0r8, Web:v1r3p7, WebApp:v1r0
