--- a/Core/scripts/install_full.cfg
+++ b/Core/scripts/install_full.cfg
@@ -13,17 +13,17 @@
 LocalInstallation
 {
    # DIRAC release version, set it to the current production version
-   Release = v6r10
+   Release = v6r12
    # LCG software package version, set it to the current production version
-   LcgVer = 2013-09-24
+   LcgVer = 2014-08-26
    # Set this flag to yes if each DIRAC software update will be installed
    # in a separate directory, not overriding the previous ones
    UseVersionsDir = yes
    # The directory of the DIRAC software installation
-   TargetPath = /vo/dirac
+   TargetPath = /opt/dirac
    # DIRAC extensions to be installed
    ExtraModules = Web
-   PythonVersion = 26
+   PythonVersion = 27
 
    # Installation is of the server type
    InstallType = server
