--- a/releases.cfg
+++ b/releases.cfg
@@ -6,7 +6,7 @@ Sources
   RESTDIRAC = git://github.com/DIRACGrid/RESTDIRAC.git
   COMDIRAC = git://github.com/DIRACGrid/COMDIRAC.git
   Web = git://github.com/DIRACGrid/DIRACWeb.git
-  WebApp = git://github.com/DIRACGrid/WebAppDIRAC.git
+  WebAppDIRAC = git://github.com/DIRACGrid/WebAppDIRAC.git
 }
 Releases
 {
