--- a/releases.cfg
+++ b/releases.cfg
@@ -17,13 +17,18 @@ Releases
   }
   v7r0-pre35
   {
-    Modules = DIRAC, VMDIRAC:v1r0, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r1
+    Modules = DIRAC, VMDIRAC:v1r0, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
     Externals = v6r2
   }
-  v6r12-pre18
+  v6r12-pre19
   {
-    Modules = DIRAC, VMDIRAC:v1r0, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r1
+    Modules = DIRAC, VMDIRAC:v1r0, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
     Externals = v6r2
+  }
+  v6r11p14
+  {
+    Modules = DIRAC, VMDIRAC:v1r0, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
+    Externals = v6r1
   }
   v6r11p13
   {
