--- a/ResourceStatusSystem/ConfigTemplate.cfg
+++ b/ResourceStatusSystem/ConfigTemplate.cfg
@@ -31,7 +31,24 @@ Agents
 {
   SummarizeLogsAgent
   {
-    LogOutputs       = stdout
-    PollingTime      = 600
+    LogOutputs = stdout
+    PollingTime = 600
+  }
+  ElementInspectorAgent
+  {
+    LogOutputs = stdout
+    PollingTime = 300
+  }
+  CacheFeederAgent
+  {
+    LogOutputs = stdout
+    PollingTime = 900
+    Status = Active
+  }
+  TokenAgent
+  {
+    LogOutputs = stdout
+    PollingTime = 3600
+    Status = Active
   }
 }
