--- a/ResourceStatusSystem/ConfigTemplate.cfg
+++ b/ResourceStatusSystem/ConfigTemplate.cfg
@@ -38,6 +38,8 @@ Agents
   {
     LogOutputs = stdout
     PollingTime = 300
+    maxNumberOfThreads = 8
+    limitQueueFeeder = 40
   }
   CacheFeederAgent
   {
