Added Bdii2CSAgent section

--- a/ConfigurationSystem/ConfigTemplate.cfg
+++ b/ConfigurationSystem/ConfigTemplate.cfg
@@ -18,7 +18,17 @@ Agents
 {
   CE2CSAgent
   {
-    BannedCSs =
+    BannedCEs =
+    MailTo =
+    MailFrom =
+    VO = 
+  }
+  Bdii2CSAgent
+  {
+    BannedCEs =
+    BannedSEs = 
+    ProcessCEs = yes
+    ProcessSEs = no
     MailTo =
     MailFrom =
     VO = 
