v6r11p22, v6r12p2, v6r13-pre3, using WebApp v1r3

--- a/releases.cfg
+++ b/releases.cfg
@@ -17,12 +17,17 @@ Releases
   }
   v7r0-pre36
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r3
     Externals = v6r2
   }
-  v6r13-pre2
+  v6r13-pre3
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r3
+    Externals = v6r2
+  }
+  v6r12p2
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r3
     Externals = v6r2
   }
   v6r12p1
@@ -34,6 +39,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
     Externals = v6r2
+  }
+  v6r11p22
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r3
+    Externals = v6r1
   }
   v6r11p21
   {
