--- a/releases.cfg
+++ b/releases.cfg
@@ -50,6 +50,11 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
     Externals = v6r2
   }
+  v6r11p24
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r4
+    Externals = v6r1
+  }
   v6r11p23
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r4
