--- a/releases.cfg
+++ b/releases.cfg
@@ -25,6 +25,11 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r4
     Externals = v6r2
   }
+  v6r12p5
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r4
+    Externals = v6r2
+  }
   v6r12p4
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r4
@@ -49,6 +54,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
     Externals = v6r2
+  }
+  v6r11p25
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r4
+    Externals = v6r1
   }
   v6r11p24
   {
