--- a/releases.cfg
+++ b/releases.cfg
@@ -20,7 +20,12 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p2
     Externals = v6r2
   }
-  v6r13-pre7
+  v6r13-pre8
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p2
+    Externals = v6r2
+  }
+  v6r12p10
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p2
     Externals = v6r2
