Added v6r12p12Added v6r12p12Added v6r12p12Added v6r12p12Added v6r12p12Added v6r12p12Added v6r12p12Added v6r12p12Added v6r12p12Added v6r12p12Added v6r12p12Added v6r12p12

--- a/releases.cfg
+++ b/releases.cfg
@@ -25,6 +25,11 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p2
     Externals = v6r2
   }
+  v6r12p12
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p2
+    Externals = v6r2
+  }
   v6r12p11
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p2
