--- a/releases.cfg
+++ b/releases.cfg
@@ -22,12 +22,12 @@ Releases
   }
   v6r13-pre10
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p3
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4p1, WebAppDIRAC:v1r6
     Externals = v6r2
   }
   v6r12p14
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p3
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4p1, WebAppDIRAC:v1r6
     Externals = v6r2
   }
   v6r12p13
@@ -97,7 +97,7 @@ Releases
   }
   v6r11p30
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p2
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4p1, WebAppDIRAC:v1r6
     Externals = v6r1
   }
   v6r11p29
