--- a/releases.cfg
+++ b/releases.cfg
@@ -20,9 +20,14 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4, WebAppDIRAC:v1r5p3
     Externals = v6r2
   }
-  v6r13-pre10
+  v6r13-pre11
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4p1, WebAppDIRAC:v1r6
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4p1, WebAppDIRAC:v1r6p1
+    Externals = v6r2
+  }
+  v6r12p15
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4p1, WebAppDIRAC:v1r6p1
     Externals = v6r2
   }
   v6r12p14
@@ -94,6 +99,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
     Externals = v6r2
+  }
+  v6r11p31
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4p1, WebAppDIRAC:v1r6p1
+    Externals = v6r1
   }
   v6r11p30
   {
