--- a/DataManagementSystem/ConfigTemplate.cfg
+++ b/DataManagementSystem/ConfigTemplate.cfg
@@ -121,6 +121,18 @@ Services
       }
     }
   }
+  IRODSStorageElementHandler
+  {
+    Port = 9188
+    Authorization
+    {
+      Default = authenticated
+      FileTransfer
+      {
+        Default = authenticated
+      }
+    }
+  }
 }
 Agents
 {
