--- a/releases.cfg
+++ b/releases.cfg
@@ -17,7 +17,7 @@ Releases
   }
   v7r0-pre36
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4, WebAppDIRAC:v1r6p1
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p1
     Externals = v6r2
   }
   v6r13-pre11
