--- a/releases.cfg
+++ b/releases.cfg
@@ -20,7 +20,12 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p1
     Externals = v6r2
   }
-  v6r13-pre11
+  v6r13-pre12
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p1
+    Externals = v6r2
+  }
+  v6r12p19
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p1
     Externals = v6r2
