--- a/releases.cfg
+++ b/releases.cfg
@@ -17,12 +17,17 @@ Releases
   }
   v7r0-pre36
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p1
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p2
     Externals = v6r2
   }
-  v6r13-pre12
+  v6r13-pre13
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p1
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p2
+    Externals = v6r2
+  }
+  v6r12p20
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p2
     Externals = v6r2
   }
   v6r12p19
