--- a/releases.cfg
+++ b/releases.cfg
@@ -25,7 +25,11 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p3
     Externals = v6r3
   }
-  
+  v6r12p24
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p3
+    Externals = v6r2
+  }
   v6r12p23
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p3
