Changes made where suggested in PR

--- a/FrameworkSystem/ConfigTemplate.cfg
+++ b/FrameworkSystem/ConfigTemplate.cfg
@@ -135,6 +135,14 @@ Services
       Default = authenticated
     }  
   }
+  ComponentMonitoring
+  {
+    Port = 9190
+    Authorization
+    {
+      Default = authenticated
+    }  
+  }
 }
 Agents
 {
