Only Service Administrators can use the ComponentMonitoring service

--- a/FrameworkSystem/ConfigTemplate.cfg
+++ b/FrameworkSystem/ConfigTemplate.cfg
@@ -140,7 +140,7 @@ Services
     Port = 9190
     Authorization
     {
-      Default = authenticated
+      Default = ServiceAdministrator
     }  
   }
 }
