--- a/releases.cfg
+++ b/releases.cfg
@@ -20,10 +20,15 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p6
     Externals = v6r3
   }
-  v6r13-pre17
+  v6r13-pre18
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p6
     Externals = v6r3
+  }
+  v6r12p30
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p6
+    Externals = v6r2
   }
   v6r12p29
   {
@@ -159,6 +164,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
     Externals = v6r2
+  }
+  v6r11p32
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4p1, WebAppDIRAC:v1r6p1
+    Externals = v6r1
   }
   v6r11p31
   {
