--- a/releases.cfg
+++ b/releases.cfg
@@ -20,10 +20,15 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p6
     Externals = v6r3
   }
-  v6r13-pre18
+  v6r13-pre19
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p6
     Externals = v6r3
+  }
+  v6r12p31
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p6
+    Externals = v6r2
   }
   v6r12p30
   {
