--- a/releases.cfg
+++ b/releases.cfg
@@ -17,13 +17,18 @@ Releases
   }
   v7r0-pre36
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p6
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p7
     Externals = v6r3
   }
-  v6r13-pre19
+  v6r13-pre20
   {
-    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p6
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p7
     Externals = v6r3
+  }
+  v6r12p33
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p1, WebAppDIRAC:v1r6p7
+    Externals = v6r2
   }
   v6r12p32
   {
