--- a/releases.cfg
+++ b/releases.cfg
@@ -25,10 +25,15 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r11, Web:v1r4p3, WebAppDIRAC:v1r6p7
     Externals = v6r3p2
   }
-  v6r13-pre29
+  v6r13-pre30
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r11, Web:v1r4p3, WebAppDIRAC:v1r6p7
     Externals = v6r3p2
+  }
+  v6r12p39
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p2, WebAppDIRAC:v1r6p7
+    Externals = v6r2
   }
   v6r12p38
   {
@@ -209,6 +214,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r3p7, WebAppDIRAC:v1r2
     Externals = v6r2
+  }
+  v6r11p33
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r9, Web:v1r4p1, WebAppDIRAC:v1r6p1
+    Externals = v6r1
   }
   v6r11p32
   {
