--- a/releases.cfg
+++ b/releases.cfg
@@ -20,12 +20,12 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p13
     Externals = v6r3p2
   }
-  v6r14-pre3
+  v6r14-pre4
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p13
     Externals = v6r3p2
   }
-  v6r14-pre2
+  v6r13p7
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p13
     Externals = v6r3p2
@@ -64,6 +64,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r11, Web:v1r4p3, WebAppDIRAC:v1r6p10
     Externals = v6r3p2
+  }
+  v6r12p44
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p2, WebAppDIRAC:v1r6p7
+    Externals = v6r2
   }
   v6r12p43
   {
