--- a/releases.cfg
+++ b/releases.cfg
@@ -22,7 +22,7 @@ Releases
   }
   v6r14-pre5
   {
-    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p15
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p15, MPIDIRAC:v0r1
     Externals = v6r3p2
   }
   v6r13p8
