--- a/releases.cfg
+++ b/releases.cfg
@@ -5,6 +5,7 @@ Sources
   VMDIRAC = git://github.com/DIRACGrid/VMDIRAC.git
   RESTDIRAC = git://github.com/DIRACGrid/RESTDIRAC.git
   COMDIRAC = git://github.com/DIRACGrid/COMDIRAC.git
+  MPIDIRAC = git://github.com/DIRACGrid/MPIDIRAC.git
   Web = git://github.com/DIRACGrid/DIRACWeb.git
   WebAppDIRAC = git://github.com/DIRACGrid/WebAppDIRAC.git
 }
