--- a/releases.cfg
+++ b/releases.cfg
@@ -8,6 +8,7 @@ Sources
   MPIDIRAC = git://github.com/DIRACGrid/MPIDIRAC.git
   Web = git://github.com/DIRACGrid/DIRACWeb.git
   WebAppDIRAC = git://github.com/DIRACGrid/WebAppDIRAC.git
+  FSDIRAC = git://github.com/DIRACGrid/FSDIRAC.git
 }
 Releases
 {
@@ -23,7 +24,7 @@ Releases
   }
   v6r14-pre6
   {
-    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p16, MPIDIRAC:v0r1
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p16, MPIDIRAC:v0r1, FSDIRAC:v0r1
     Externals = v6r3p2
   }
   v6r13p9
