--- a/releases.cfg
+++ b/releases.cfg
@@ -22,9 +22,14 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p16
     Externals = v6r3p2
   }
-  v6r14-pre6
+  v6r14-pre7
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p16, MPIDIRAC:v0r1, FSDIRAC:v0r1
+    Externals = v6r3p2
+  }
+  v6r13p10
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p16
     Externals = v6r3p2
   }
   v6r13p9
