--- a/releases.cfg
+++ b/releases.cfg
@@ -22,9 +22,14 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p16
     Externals = v6r3p2
   }
-  v6r14-pre7
+  v6r14-pre8
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p16, MPIDIRAC:v0r1, FSDIRAC:v0r1
+    Externals = v6r3p2
+  }
+  v6r13p11
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p16
     Externals = v6r3p2
   }
   v6r13p10
@@ -81,6 +86,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r11, Web:v1r4p3, WebAppDIRAC:v1r6p10
     Externals = v6r3p2
+  }
+  v6r12p47
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p2, WebAppDIRAC:v1r6p7
+    Externals = v6r2
   }
   v6r12p46
   {
