Added default elementType

--- a/ResourceStatusSystem/ConfigTemplate.cfg
+++ b/ResourceStatusSystem/ConfigTemplate.cfg
@@ -40,6 +40,7 @@ Agents
     PollingTime = 300
     maxNumberOfThreads = 8
     limitQueueFeeder = 40
+    elementType = Resource
   }
   CacheFeederAgent
   {
