Data Logging System

--- a/DataManagementSystem/ConfigTemplate.cfg
+++ b/DataManagementSystem/ConfigTemplate.cfg
@@ -15,8 +15,6 @@ Services
     {
       Default = authenticated
     }
-    
-
   }
 #  LcgFileCatalogProxy
 #  {
@@ -92,10 +90,22 @@ Services
       }
     }
   }
+  DataLogging
+  {
+    MaxSequenceToMove = 200
+    Port = 9171
+    ExpirationTime = 3600
+    MoveSequencesPeriod = 10
+    CleanExpiredPeriod = 10800
+    Authorization
+    {
+      Default = all
+    }
+  }
 }
 Agents
 {
-  FTSAgent 
+  FTSAgent
   {
 
  	PollingTime = 120
@@ -116,7 +126,7 @@ Agents
   	DeleteGraceDays = 180
   	DeleteLimitPerCycle = 100
   	KickAssignedHours  = 1
-  	KickLimitPerCycle = 100  
+  	KickLimitPerCycle = 100
   }
 
 #  LFCvsSEAgent
@@ -149,8 +159,8 @@ Agents
 #        LogBackends = stdout
 #        HopSigma = 5
 #        SchedulingType = File
-#        ActiveStrategies = MinimiseTotalWait 
-#        AcceptableFailureRate = 75  
+#        ActiveStrategies = MinimiseTotalWait
+#        AcceptableFailureRate = 75
 #        AcceptableFailedFiles = 5
 #      }
 #      FTS3
@@ -159,6 +169,6 @@ Agents
 #        # Random : choose random from the list
 #        # Sequence : one after the other
 #        # Failover : always use the first one, goes to the next if problem
-#        ServerPolicy = Random 
+#        ServerPolicy = Random
 #      }
 #    }
