--- a/releases.cfg
+++ b/releases.cfg
@@ -22,6 +22,11 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p17
     Externals = v6r3p2
   }
+  v6r15-pre1
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p17, MPIDIRAC:v0r1, FSDIRAC:v0r2
+    Externals = v6r3p2
+  }
   v6r14
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p17, MPIDIRAC:v0r1, FSDIRAC:v0r2
