config template with dls agent and change the default value of DeleteCompressedSequencesPeriod service option

--- a/DataManagementSystem/ConfigTemplate.cfg
+++ b/DataManagementSystem/ConfigTemplate.cfg
@@ -93,6 +93,7 @@ Services
   DataLogging
   {
     MaxSequenceToMove = 200
+    DeleteCompressedSequencesPeriod = 10800
     Port = 9171
     ExpirationTime = 3600
     MoveSequencesPeriod = 10
@@ -105,6 +106,11 @@ Services
 }
 Agents
 {
+  DataLoggingAgent
+  {
+    PollingTime = 10
+    MaxSequenceToMove = 500
+  }
   FTSAgent
   {
 
