--- a/releases.cfg
+++ b/releases.cfg
@@ -19,12 +19,17 @@ Releases
   }
   v7r0-pre36
   {
-    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p17
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p18
     Externals = v6r3p2
   }
-  v6r15-pre1
+  v6r15-pre2
   {
-    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p17, MPIDIRAC:v0r1, FSDIRAC:v0r2
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p18, MPIDIRAC:v0r1, FSDIRAC:v0r2
+    Externals = v6r3p2
+  }
+  v6r14p1
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p18, MPIDIRAC:v0r1, FSDIRAC:v0r2
     Externals = v6r3p2
   }
   v6r14
@@ -35,6 +40,11 @@ Releases
   v6r14-pre9
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p17, MPIDIRAC:v0r1, FSDIRAC:v0r2
+    Externals = v6r3p2
+  }
+  v6r13p14
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p18
     Externals = v6r3p2
   }
   v6r13p13
