Integration depends on Externals v6r3p3

--- a/releases.cfg
+++ b/releases.cfg
@@ -15,7 +15,7 @@ Releases
   integration
   {
     Modules = DIRAC, Web, VMDIRAC
-    Externals = v6r1
+    Externals = v6r3p3
   }
   v7r0-pre36
   {
