Add agent to restart the RequestExecutingAgent when it gets stuck

--- a/RequestManagementSystem/ConfigTemplate.cfg
+++ b/RequestManagementSystem/ConfigTemplate.cfg
@@ -119,6 +119,11 @@ Agents
  	  KickGraceHours = 2
  	  KickLimit = 100
   }
+  RestartReqExeAgent
+  {
+	MaxLogAge = 60
+	AgentNames = RequestExecutingAgent
+  }
   DISETForwardingAgent
   {
     PollingTime = 30
