--- a/releases.cfg
+++ b/releases.cfg
@@ -19,13 +19,18 @@ Releases
   }
   v7r0-pre36
   {
-    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p19
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p20
     Externals = v6r3p2
   }
-  v6r15-pre3
+  v6r15-pre4
   {
-    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p19, MPIDIRAC:v0r1, FSDIRAC:v0r3
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p20, MPIDIRAC:v0r1, FSDIRAC:v0r3
     Externals = v6r3p3
+  }
+  v6r14p4
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p20, MPIDIRAC:v0r1, FSDIRAC:v0r3
+    Externals = v6r3p2
   }
   v6r14p3
   {
@@ -50,6 +55,11 @@ Releases
   v6r14-pre9
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p17, MPIDIRAC:v0r1, FSDIRAC:v0r2
+    Externals = v6r3p2
+  }
+  v6r13p15
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p18
     Externals = v6r3p2
   }
   v6r13p14
@@ -126,6 +136,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r11, Web:v1r4p3, WebAppDIRAC:v1r6p10
     Externals = v6r3p2
+  }
+  v6r12p50
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p2, WebAppDIRAC:v1r6p7
+    Externals = v6r2
   }
   v6r12p49
   {
