--- a/releases.cfg
+++ b/releases.cfg
@@ -22,10 +22,15 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p20
     Externals = v6r3p2
   }
-  v6r15-pre4
+  v6r15-pre5
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p20, MPIDIRAC:v0r1, FSDIRAC:v0r3
     Externals = v6r3p3
+  }
+  v6r14p5
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p20, MPIDIRAC:v0r1, FSDIRAC:v0r3
+    Externals = v6r3p2
   }
   v6r14p4
   {
