--- a/ConfigurationSystem/ConfigTemplate.cfg
+++ b/ConfigurationSystem/ConfigTemplate.cfg
@@ -39,4 +39,11 @@ Agents
     mailFrom = 
     LFCCheckEnabled = False
   }
+  VOMS2CSAgent
+  {
+    mailFrom = noreply@dirac.system
+    addNewUsers = True
+    updateUsers = True
+    deleteUsers = False
+  }
 }
