--- a/releases.cfg
+++ b/releases.cfg
@@ -27,6 +27,11 @@ Releases
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p21, MPIDIRAC:v0r1, FSDIRAC:v0r3
     Externals = v6r3p3
   }
+  v6r14p8
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p21, MPIDIRAC:v0r1, FSDIRAC:v0r3
+    Externals = v6r3p2
+  }
   v6r14p7
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p21, MPIDIRAC:v0r1, FSDIRAC:v0r3
@@ -60,6 +65,11 @@ Releases
   v6r14
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p17, MPIDIRAC:v0r1, FSDIRAC:v0r2
+    Externals = v6r3p2
+  }
+  v6r13p17
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p18
     Externals = v6r3p2
   }
   v6r13p16
@@ -146,6 +156,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r11, Web:v1r4p3, WebAppDIRAC:v1r6p10
     Externals = v6r3p2
+  }
+  v6r12p52
+  {
+    Modules = DIRAC, VMDIRAC:v1r2, RESTDIRAC:v0r2, COMDIRAC:v0r10, Web:v1r4p2, WebAppDIRAC:v1r6p7
+    Externals = v6r2
   }
   v6r12p51
   {
