VOMS2CSAgent options

--- a/ConfigurationSystem/ConfigTemplate.cfg
+++ b/ConfigurationSystem/ConfigTemplate.cfg
@@ -42,8 +42,9 @@ Agents
   VOMS2CSAgent
   {
     mailFrom = noreply@dirac.system
-    addNewUsers = True
-    updateUsers = True
-    deleteUsers = False
+    AutoAddUsers = False
+    AutoModifyUsers = False
+    AutoSuspendUsers = False
+    VO = None
   }
 }
