Include PilotsLogging service in ConfigTemplate.cfg

--- a/WorkloadManagementSystem/ConfigTemplate.cfg
+++ b/WorkloadManagementSystem/ConfigTemplate.cfg
@@ -76,6 +76,16 @@ Services
       Services = 
     }
   }
+  #Parameters of the PilotsLogging service
+  PilotsLogging
+  {
+    Port = 9146
+    Authorization
+    {
+      Default = Operator
+      getPilotsLogging = authenticated
+    }
+  }
   SandboxStore
   {
     Port = 9196
