PollingTime default set in ConfigTemplate

--- a/ConfigurationSystem/ConfigTemplate.cfg
+++ b/ConfigurationSystem/ConfigTemplate.cfg
@@ -41,6 +41,7 @@ Agents
   }
   VOMS2CSAgent
   {
+    PollingTime = 14400
     mailFrom = noreply@dirac.system
     AutoAddUsers = False
     AutoModifyUsers = False
