--- a/releases.cfg
+++ b/releases.cfg
@@ -17,7 +17,7 @@ Releases
     Modules = DIRAC, Web, VMDIRAC
     Externals = v6r3p3
   }
-  v7r0-pre36
+  v7r0-pre36i
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p20
     Externals = v6r3p2
@@ -26,6 +26,11 @@ Releases
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p22, MPIDIRAC:v0r1, FSDIRAC:v0r3
     Externals = v6r3p3
+  }
+  v6r14p12
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p22, MPIDIRAC:v0r1, FSDIRAC:v0r3
+    Externals = v6r3p2
   }
   v6r14p11
   {
@@ -80,6 +85,11 @@ Releases
   v6r14
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p17, MPIDIRAC:v0r1, FSDIRAC:v0r2
+    Externals = v6r3p2
+  }
+  v6r13p21
+  {
+    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p18
     Externals = v6r3p2
   }
   v6r13p20
