--- a/releases.cfg
+++ b/releases.cfg
@@ -17,7 +17,7 @@ Releases
     Modules = DIRAC, Web, VMDIRAC
     Externals = v6r3p3
   }
-  v7r0-pre36i
+  v7r0-pre36
   {
     Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p20
     Externals = v6r3p2
