Fix after tests

--- a/DataManagementSystem/ConfigTemplate.cfg
+++ b/DataManagementSystem/ConfigTemplate.cfg
@@ -15,8 +15,14 @@ Services
     {
       Default = authenticated
     }
-    
-
+  }
+  FTS3Manager
+  {
+    Port = 9193
+    Authorization
+    {
+      Default = authenticated
+    }
   }
 #  LcgFileCatalogProxy
 #  {
@@ -110,6 +116,11 @@ Agents
  	shifterProxy = DataManager
   }
 
+  FTS3Agent 
+  {
+    PollingTime = 120
+  }
+  
   CleanFTSDBAgent {
   	PollingTime = 300
   	ControlDirectory = control/DataManagement/CleanFTSDBAgent
