--- a/releases.cfg
+++ b/releases.cfg
@@ -19,13 +19,18 @@ Releases
   }
   v7r0-pre36
   {
-    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p23
+    Modules = DIRAC, VMDIRAC:v1r4, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p23
     Externals = v6r3p3
   }
-  v6r15-pre11
+  v6r15-pre12
   {
-    Modules = DIRAC, VMDIRAC:v1r3, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p23, MPIDIRAC:v0r1, FSDIRAC:v0r3
+    Modules = DIRAC, VMDIRAC:v1r4, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p23, MPIDIRAC:v0r1, FSDIRAC:v0r3
     Externals = v6r3p3
+  }
+  v6r14p17
+  {
+    Modules = DIRAC, VMDIRAC:v1r4, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p23, MPIDIRAC:v0r1, FSDIRAC:v0r3
+    Externals = v6r3p2
   }
   v6r14p16
   {
