--- a/releases.cfg
+++ b/releases.cfg
@@ -25,7 +25,7 @@ Releases
   v6r15-pre12
   {
     Modules = DIRAC, VMDIRAC:v1r4, RESTDIRAC:v0r3, COMDIRAC:v0r12, Web:v1r4p3, WebAppDIRAC:v1r6p23, MPIDIRAC:v0r1, FSDIRAC:v0r3
-    Externals = v6r3p3
+    Externals = v6r4
   }
   v6r14p17
   {
