--- a/DataManagementSystem/ConfigTemplate.cfg
+++ b/DataManagementSystem/ConfigTemplate.cfg
@@ -119,6 +119,13 @@ Agents
   FTS3Agent 
   {
     PollingTime = 120
+    MaxThreads = 10
+    # How many Operation we will treat in one loop
+    OperationBulkSize = 20
+    # How many Job we will monitor in one loop
+    JobBulkSize = 20
+    MaxFilesPerJob = 100
+    maxAttemptsPerFile = 256
   }
   
   CleanFTSDBAgent {
