New FTS3 only system

--- a/DataManagementSystem/ConfigTemplate.cfg
+++ b/DataManagementSystem/ConfigTemplate.cfg
@@ -15,8 +15,14 @@ Services
     {
       Default = authenticated
     }
-    
-
+  }
+  FTS3Manager
+  {
+    Port = 9193
+    Authorization
+    {
+      Default = authenticated
+    }
   }
 #  LcgFileCatalogProxy
 #  {
@@ -110,6 +116,18 @@ Agents
  	shifterProxy = DataManager
   }
 
+  FTS3Agent 
+  {
+    PollingTime = 120
+    MaxThreads = 10
+    # How many Operation we will treat in one loop
+    OperationBulkSize = 20
+    # How many Job we will monitor in one loop
+    JobBulkSize = 20
+    MaxFilesPerJob = 100
+    maxAttemptsPerFile = 256
+  }
+  
   CleanFTSDBAgent {
   	PollingTime = 300
   	ControlDirectory = control/DataManagement/CleanFTSDBAgent
