RSS is now aggregating emails

--- a/ResourceStatusSystem/ConfigTemplate.cfg
+++ b/ResourceStatusSystem/ConfigTemplate.cfg
@@ -54,4 +54,10 @@ Agents
     PollingTime = 3600
     Status = Active
   }
+  EmailAgent
+  {
+    LogOutputs = stdout
+    PollingTime = 1800
+    Status = Active
+  }
 }
